--- a/.github/workflows/deploy-cloudflare-worker.yaml
+++ b/.github/workflows/deploy-cloudflare-worker.yaml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo -n ${{ secrets.AUTH0_AUDIENCE }} | sed -n 's/http.:\/\/(.*)\/.*/DOMAIN_NAME=\1\n/p' > .env
+          echo -n ${{ secrets.AUTH0_AUDIENCE }} | sed -n 's/http.:\/\/\(.*\)\/.*/DOMAIN_NAME=\1\n/p' > .env
 
           echo "AUTH0_DOMAIN=${{ secrets.AUTH0_DOMAIN }}" >> .env
           echo "AUTH0_CLIENT_ID=${{ secrets.AUTH0_CLIENT_ID }}" >> .env
