--- a/.github/workflows/deploy-cloudflare-worker.yaml
+++ b/.github/workflows/deploy-cloudflare-worker.yaml
@@ -56,6 +56,7 @@ jobs:
         if: false # Temporarily disabled to work around bug https://github.com/yarnpkg/berry/issues/7047
         run: |
           corepack enable
+          yarn set version 4.12.0
           yarn install --immutable
 
       - name: Temporary workaround for bug https://github.com/yarnpkg/berry/issues/7047
