--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -38,6 +38,7 @@ jobs:
         if: false # Temporarily disabled to work around bug
         run: |
           corepack enable
+          yarn set version 4.12.0
           yarn install --immutable
 
       - name: Temporary workaround for bug https://github.com/yarnpkg/berry/issues/7047
